--- a/texProj/main.tex
+++ b/texProj/main.tex
@@ -71,6 +71,7 @@ $$ R\in SO(m) $$
 Special Orthonormal group: real m×m matrices with orthonormal columns and
 determinant=1
  
+ \newpage
  \subsection{Rotation along the axis - Elementry Rotations}
  \begin{figure}[h!]
 \centering
@@ -210,7 +211,8 @@ Define:
     \item $R^{0}_1$: rotation for $O_1$ w.r.t $O_0$
     \item $R$: rotation of $O_1$ w.r.t $O_0$ to obtain $O_2$
 \end{itemize}
-So: $R^{0}_2 = R^{0}_1 R^{1}_2$: rotation for $O_2$ w.r.t $O_0$ but we know it is nto the transformation we want so... $R^{0}_2 \ne R^{0}_1 R$
+
+$R^{0}_2 = R^{0}_1 R^{1}_2$: rotation for $O_2$ w.r.t $O_0$ but we know it is nto the transformation we want so... $$R^{0}_2 \ne R^{0}_1 R$$
 
 What we really want is:\\
 $$R^{0}_2 = R^{0}_1\begin{bmatrix}
@@ -218,7 +220,7 @@ $$R^{0}_2 = R^{0}_1\begin{bmatrix}
 \end{bmatrix}  $$
 
 after opening the brackets: 
-$ ( R^{0}_1(R^{0}_1)^{-1} = R^{0}_1(R^{0}_1)^{T} = I ) $
+$\left[ R^{0}_1(R^{0}_1)^{-1} = R^{0}_1(R^{0}_1)^{T} = I \right] $
 
 $$R^{0}_2 = RR^{0}_{1}  $$
 
