--- a/texProj/main.tex
+++ b/texProj/main.tex
@@ -732,6 +732,87 @@ in case the focal length is given in mm, use sensor dimentions:
 
 \end{itemize}
 
+\subsection{Extrinsic parameters}
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=1.7]{cameraCord.png}
+\caption{World and camera coordination systems}
+\label{fig:sr}
+\end{figure}
+Extrinsic parameters represent the pose of the camera in the world, it includes the orientation ($yaw,pitch,roll$) and the camera translation $\left[	 X_c,Y_c,Z_c \right]$ in the world system, 6 parameters all togather: $\textrm{camera 6 DOF[Degree of freedom]}$
+\begin{itemize}
+	\item Extrinsic parameters are represent in the form of rotation matrix and translation vector:
+	$$
+	\begin{bmatrix}
+		X_c\\ Y_c\\ Z_c
+	\end{bmatrix} = R 
+	\begin{bmatrix}
+		X_w\\ Y_w\\ Z_w
+	\end{bmatrix}	+ t =	
+	\begin{bmatrix}
+	R|t
+	\end{bmatrix}
+	\begin{bmatrix}
+	    X_w\\ Y_w\\ Z_w\\1
+	\end{bmatrix}
+	$$
+	where $P = \begin{bmatrix}	R|t	\end{bmatrix}$ is homogeneous coordinatation.
+	$$ P = \begin{bmatrix}
+        r_{11} & r_{12} & r_{13} & t_X\\
+        r_{21} & r_{22} & r_{23} & t_y\\
+        r_{31} & r_{32} & r_{33} & t_z\\
+        0 & 0 & 0 & 1
+        \end{bmatrix}
+    $$
+    \item From simple geometry: \\
+    $
+    	x = f_x\frac{X_c}{Z_c} ;\:
+    	y = f_y\frac{Y_c}{Z_c}
+    $ ; where $(x,y)$ is image space (pixels), in matrix: 
+    $$\begin{bmatrix}
+    x'\\y'\\z'
+    \end{bmatrix} =
+    K
+        \begin{bmatrix}
+    X_c \\ Y_c \\ Z_c
+    \end{bmatrix}
+    = 
+    \begin{bmatrix}
+    f_x & 0 & 0\\
+    0 & f_y & 0 \\
+    0 & 0 & 1
+    \end{bmatrix}
+    \begin{bmatrix}
+    X_c \\ Y_c \\ Z_c
+    \end{bmatrix}
+    $$
+    $$
+    K = 
+    \begin{bmatrix}
+    f_x & \gamma & c_x\\
+    0 & f_y & cy \\
+    0 & 0 & 1
+    \end{bmatrix} 
+    \textrm{; K is the intrinsic matrix}
+    $$
+    usually we will refer it like this:
+    $$\begin{bmatrix}
+    u'\\v'\\w'
+    \end{bmatrix} =
+	\begin{bmatrix}
+    	f_x & \gamma & c_x\\
+    	0 & f_y & cy \\
+    	0 & 0 & 1
+    \end{bmatrix}     
+    \begin{bmatrix}
+    	X_c \\ Y_c \\ Z_c
+    \end{bmatrix}
+    \textrm{; where: }
+    u = \frac{u'}{w'}\\
+    v = \frac{v'}{w'}
+    $$
+\end{itemize}
+
 
 
 
